assert-struct/tests/snapshots/maps__missing_key.snap
---
source: assert-struct/tests/maps.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/map_errors/missing_key.rs:19:22
   |
19 |         string_map: #{ "missing_key": "value", .. },
   |                      ^ got missing key
